--- a/root/index.html
+++ b/root/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Landing page for your discord bot.</title>
+	<title>Unity.ml</title>
 	<link rel="stylesheet" href="style.css">
 	<script src="https://kit.fontawesome.com/755b6605e0.js"></script>
 </head>
