--- a/root/index.html
+++ b/root/index.html
@@ -26,8 +26,7 @@
 	<section class="intro container">
 		<h1>UNITY</h1>
 		<div class="btn">
-			<a href="#"><i class="fas fa-plus"></i>ADD BOT</a>
-		</div>
+			<a href="#"><i class="fas fa-plus"></i>ADD ME
 		<div class="btn">
 			<a href="#"><i class="fas fa-terminal"></i>See features</a>
 		</div>
